; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/aosdk/extr_ssf.c_ao_get_lib.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/aosdk/extr_ssf.c_ao_get_lib.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"Unable to find auxiliary file %s\0A\00", align 1
@AO_FAIL = common dso_local global i32 0, align 4
@SEEK_END = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [46 x i8] c"ERROR: could not allocate %d bytes of memory\0A\00", align 1
@AO_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ao_get_lib(i8* %0, i32** %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i64* %2, i64** %7, align 8
  store i64 0, i64* %11, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i32* @fopen(i8* %12, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %13, i32** %10, align 8
  %14 = load i32*, i32** %10, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %20, label %16

16:                                               ; preds = %3
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i8* %17)
  %19 = load i32, i32* @AO_FAIL, align 4
  store i32 %19, i32* %4, align 4
  br label %52

20:                                               ; preds = %3
  %21 = load i32*, i32** %10, align 8
  %22 = load i32, i32* @SEEK_END, align 4
  %23 = call i32 @fseek(i32* %21, i32 0, i32 %22)
  %24 = load i32*, i32** %10, align 8
  %25 = call i32 @ftell(i32* %24)
  store i32 %25, i32* %9, align 4
  %26 = load i32*, i32** %10, align 8
  %27 = load i32, i32* @SEEK_SET, align 4
  %28 = call i32 @fseek(i32* %26, i32 0, i32 %27)
  %29 = load i32, i32* %9, align 4
  %30 = call i32* @malloc(i32 %29)
  store i32* %30, i32** %8, align 8
  %31 = load i32*, i32** %8, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %39, label %33

33:                                               ; preds = %20
  %34 = load i32*, i32** %10, align 8
  %35 = call i32 @fclose(i32* %34)
  %36 = load i32, i32* %9, align 4
  %37 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.2, i64 0, i64 0), i32 %36)
  %38 = load i32, i32* @AO_FAIL, align 4
  store i32 %38, i32* %4, align 4
  br label %52

39:                                               ; preds = %20
  %40 = load i32*, i32** %8, align 8
  %41 = load i32, i32* %9, align 4
  %42 = load i32*, i32** %10, align 8
  %43 = call i64 @fread(i32* %40, i32 %41, i32 1, i32* %42)
  store i64 %43, i64* %11, align 8
  %44 = load i32*, i32** %10, align 8
  %45 = call i32 @fclose(i32* %44)
  %46 = load i32*, i32** %8, align 8
  %47 = load i32**, i32*** %6, align 8
  store i32* %46, i32** %47, align 8
  %48 = load i32, i32* %9, align 4
  %49 = sext i32 %48 to i64
  %50 = load i64*, i64** %7, align 8
  store i64 %49, i64* %50, align 8
  %51 = load i32, i32* @AO_SUCCESS, align 4
  store i32 %51, i32* %4, align 4
  br label %52

52:                                               ; preds = %39, %33, %16
  %53 = load i32, i32* %4, align 4
  ret i32 %53
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @fseek(i32*, i32, i32) #1

declare dso_local i32 @ftell(i32*) #1

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i64 @fread(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
